Bug 274495 - Dolphin menu always appears on primary screen
Summary: Dolphin menu always appears on primary screen
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-30 03:28 UTC by Kai Uwe Broulik
Modified: 2011-06-22 08:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.0
Sentry Crash Report:


Attachments
Dolphin menu is sticked to the primary screen (121.86 KB, image/jpeg)
2011-05-30 03:28 UTC, Kai Uwe Broulik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2011-05-30 03:28:58 UTC
Created attachment 60458 [details]
Dolphin menu is sticked to the primary screen

Version:           unspecified (using Devel) 
OS:                Linux

The new dolphin menu introduced in 4.7 is restricted to the primary screen. On my other screens it appears on the corner of the primary screen. See attachment.

Reproducible: Always
Comment 1 Peter Penz 2011-05-30 16:33:50 UTC
Git commit 7ae99b2aebde35a3dcf58cf936f80587ebae49eb by Peter Penz.
Committed on 30/05/2011 at 16:32.
Pushed by ppenz into branch 'master'.

Fix position of Dolphin menu with multiple-screens setup

BUG: 274495
FIXED-IN: 4.7.0

M  +2    -0    dolphin/src/dolphinmainwindow.cpp     

http://commits.kde.org/kde-baseapps/7ae99b2aebde35a3dcf58cf936f80587ebae49eb
Comment 2 Peter Penz 2011-05-30 16:35:08 UTC
I could not test the patch as I don't have a multiple screens. Please reopen the issue if the issue is not fixed. Thanks!
Comment 3 Kai Uwe Broulik 2011-06-02 13:03:52 UTC
Sorry for the delay but I had to wait till your patch was in the Project Neon repositories :)
That patch didn’t fix it completely.
On the primary screen: Everything’s fine.
On the secondary screen: The menu is sticked to the right corner of the screen. Y coordinates are correct (so the top position of the menu matches the dolphin menu button) but we need some work on the X coordinate :P
Comment 4 Peter Penz 2011-06-02 16:59:37 UTC
Thanks for checking! OK, it is at least better than before ;-) I'll make an update again during next week (I'll be offline during the next days) - I hope it works then.
Comment 5 Peter Penz 2011-06-10 16:28:02 UTC
Git commit 0fec71a6e91ed892effbce28c7ee1727562bbe1f by Peter Penz.
Committed on 10/06/2011 at 16:26.
Pushed by ppenz into branch 'master'.

Fix position of toolbar-menu

CCBUG: 274495

M  +7    -9    dolphin/src/dolphinmainwindow.cpp     

http://commits.kde.org/kde-baseapps/0fec71a6e91ed892effbce28c7ee1727562bbe1f
Comment 6 Peter Penz 2011-06-10 16:29:07 UTC
Another try :-)
Comment 7 Kai Uwe Broulik 2011-06-21 23:54:42 UTC
Sorry for the delay. That finally fixed it :) Thanks
Comment 8 Peter Penz 2011-06-22 08:56:17 UTC
Ah, great :-)