Fix position of Dolphin menu with multiple-screens setup

BUG: 274495
FIXED-IN: 4.7.0